mobile version fixes, and changes of a work section to only be visible in mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,12 @@ section{
   height: 25px;
 }
 
+
+.mobile-only{
+  display: none;
+}
+
+
 .rrss li{
   padding-right: 10px;
   padding-left: 10px;
@@ -262,16 +268,16 @@ footer li a{
   }
 
   nav li a{
-    margin: 0 10px;
     padding: 0 10px;
     text-align: center;
     font-size: 13px;
   }
+
   header{
     margin: 0 30px;
     top: 100px;
     text-align: center;
-    padding-bottom: 100px;
+    padding-bottom: 150px;
   
   }
 
@@ -311,9 +317,11 @@ footer li a{
     text-align: center;
   }
 
-   .icon-social{
+  .mobile-only{
+    display: block;
+  }
 
-    
+   .icon-social{
     width: 20px;
     height: auto;
 
